# Word2Vec_Training_Loop

./: .gitignore  Dockerfile  IMPLEMENTATION_REVIEW.md  Makefile  README.md  VERIFICATION.md  demo.py  pyproject.toml  pyrightconfig.json
.github/workflows/: benchmark-smoke.yml  ci.yml  release-build.yml  security.yml
data/: tiny_corpus.txt
docs/: index.md  quickstart.md
docs/architecture/: overview.md  training-and-model.md
docs/development/: benchmarking.md  persistence.md  quality.md
docs/reference/: artifacts.md  benchmark-profiles.md
docs/running/: cli.md  docker.md  makefile.md  scripts.md
scripts/: run_benchmarks.ps1  run_benchmarks.sh  run_checks.ps1  run_checks.sh  run_demo.ps1  run_demo.sh  run_full_demo.ps1  run_full_demo.sh  run_interview_demo.ps1  run_interview_demo.sh  run_long_real_benchmark.ps1  run_long_real_benchmark.sh  run_medium_real_benchmark.ps1  run_medium_real_benchmark.sh  run_module.ps1  run_module.sh  run_tests.ps1  run_tests.sh
src/word2vec/: __init__.py  __main__.py  benchmark.py  data.py  demo.py  eval.py  io.py  model.py  preprocessing.py  sampling.py  training.py
tests/: test_data.py  test_eval.py  test_gradients.py  test_integration.py  test_io.py  test_main.py  test_model.py  test_preprocessing.py  test_sampling.py  test_training.py
